# agentic-progress

./: learning_checklist.md  main.py  pyproject.toml
Agent Foundations/: basic_agent.py  plan_and_execute.py
Phase 2 LLM App Basics/simple_rag/: faiss_rag.py  numpy_rag.py
Phase 2: LLM App Basics/simple_chat/: main.py  requirements.md
langchain_fundamentals/: context_and_state.py  custom_state.py  initchat.py  mcp_adapter.py  mcp_server.py  multi_agent.py  online_mcp.py  stm.py  wedding_planner_agent.py
langchain_fundamentals/middleware/: human_in_the_loop.py  summarizer.py
langgraph_fundamentals/: agent_loop.py  chain_lg.py  router_graph.py  simple_graph.py
